# Parse-ImageNet

./: .gitignore  LICENSE  Makefile  ParseImageNetSubset.py  README.md  pyproject.toml
.github/workflows/: publish.yml  test.publish.yml
DOCS/: ExampleNotebook.ipynb
DOCS/.ipynb_checkpoints/: ExampleNotebook-checkpoint.ipynb
parseimagenet/: ParseImageNetSubset.py  __init__.py
parseimagenet/helpers/: annotations.py  filtering.py  paths.py  sampling.py  synset.py  validation.py
parseimagenet/keywords/: __init__.py  bird_breeds.py  birds.py  dog_breeds.py  snake_breeds.py
parseimagenet/utils/: __init__.py  display.py
tests/: conftest.py  test_all_categories.py  test_cli.py  test_edge_cases.py  test_exports.py  test_get_image_paths.py  test_keyword_lists.py  test_presets.py  test_source_parameter.py  test_synset_mapping.py
