[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "parseimagenet"
version = "1.1.0"
license = { text = "MIT" }
description = "Extract ImageNet image paths by category keywords"
readme = "README.md"
authors = [
  { name="Reed Turgeon", email="turgeon.dev@gmail.com" },
]
requires-python = ">=3.8"
dependencies = []

# Classifiers help users find your project on PyPI
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
"Homepage" = "https://github.com/MrT3313/Parse-ImageNet"

[project.optional-dependencies]
dev = ["jupyter", "ipykernel", "pytest>=7.0"]

# Package discovery configuration
# The package lives in the "parseimagenet/" subdirectory, following standard Python packaging conventions.
# This allows `pip install -e .` to work correctly, making `from parseimagenet import ...` available.
# Structure:
#   ParseImageNet/           <- project root (where pyproject.toml lives)
#   └── parseimagenet/       <- actual Python package (has __init__.py)
#       ├── __init__.py
#       ├── ParseImageNetSubset.py
#       └── keywords/
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.setuptools.packages.find]
where = ["."]
